--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "c-cpp-compile-run.run-in-external-terminal": true
+    "c-cpp-compile-run.run-in-external-terminal": true,
+    "files.associations": {
+        "iostream": "cpp",
+        "random": "cpp"
+    }
 }
